# katex-rs

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md
.config/: insta.yaml  nextest.toml
.github/workflows/: ci.yml  release-plz.yml
crates/katex/: CHANGELOG.md  Cargo.toml  build.rs
crates/katex/benches/: perf.rs  perf_gungraun.rs  support.rs
crates/katex/data/: font_metrics_data.json  sigmas_and_xis.json  symbols.json
crates/katex/src/: build_common.rs  build_html.rs  build_mathml.rs  build_tree.rs  context.rs  core.rs  delimiter.rs  dom_tree.rs  lib.rs  macro_expander.rs  mathml_tree.rs  options.rs  parse_tree.rs  stretchy.rs  style.rs  tree.rs  units.rs
crates/katex/src/define_environment/: array.rs  cd.rs
crates/katex/src/define_function/: mod.rs
crates/katex/src/functions/: accent.rs  accentunder.rs  arrow.rs  char.rs  color.rs  cr.rs  def.rs  delimsizing.rs  enclose.rs  environment.rs  font.rs  genfrac.rs  hbox.rs  horiz_brace.rs  href.rs  html.rs  htmlmathml.rs  includegraphics.rs  kern.rs  lap.rs  math.rs  mathchoice.rs  mclass.rs  op.rs  operatorname.rs  ordgroup.rs  overline.rs  phantom.rs  pmb.rs  raisebox.rs  rule.rs  sizing.rs  smash.rs  sqrt.rs  styling.rs  supsub.rs  symbols_op.rs  symbols_spacing.rs  text.rs  underline.rs  (+2 more)
crates/katex/src/functions/utils/: assemble_sup_sub.rs
crates/katex/src/lexer/: mod.rs
crates/katex/src/parser/: mod.rs  parse_node.rs
crates/katex/src/symbols/: mod.rs
crates/katex/src/types/: class_list.rs  mod.rs  parse_error.rs  tokens.rs
crates/katex/src/utils/: mod.rs
crates/katex/tests/: dup_spec.rs  errors_spec.rs  katex_spec.rs  mathml_spec.rs  unicode_spec.rs
crates/katex/tests/setup/: mod.rs
crates/katex/tests/snapshots/: katex_spec__boldsymbol_inherits_mbin_mrel.snap  katex_spec__eastern_arabic_numerals_html.snap  katex_spec__error_render_double_superscript.snap  katex_spec__error_render_escape.snap  katex_spec__href_allow_all_protocols.snap  katex_spec__href_allow_explicit_protocol.snap  katex_spec__href_disallow_protocol.snap  katex_spec__href_disallow_uppercase_protocol.snap  katex_spec__href_relative_url_forbidden.snap  katex_spec__href_spacing.snap  katex_spec__html_extension_render.snap  katex_spec__html_extension_spacing.snap  katex_spec__includegraphics_with_trust.snap  katex_spec__includegraphics_without_trust.snap  katex_spec__let_optional_space_parse.snap  katex_spec__matrix_arraystretch_parse.snap  katex_spec__newline_markup.snap  katex_spec__parse_tree_sigma_squared.snap  katex_spec__sqrt_optional_group_color.snap  katex_spec__sqrt_optional_group_old_font.snap  katex_spec__sqrt_optional_group_small.snap  katex_spec__sqrt_optional_group_textstyle.snap  mathml_spec__mathml_spec__accent_mover.snap  mathml_spec__mathml_spec__boldsymbol_mathvariants.snap  mathml_spec__mathml_spec__cd_environment.snap  mathml_spec__mathml_spec__concatenate_digits.snap  mathml_spec__mathml_spec__concatenate_digits_commas.snap  mathml_spec__mathml_spec__href_trusted.snap  mathml_spec__mathml_spec__htmlmathml_clean_symbols.snap  mathml_spec__mathml_spec__ligatures.snap  mathml_spec__mathml_spec__limsup_displaymode.snap  mathml_spec__mathml_spec__limsup_textstyle.snap  mathml_spec__mathml_spec__mathchoice_display.snap  mathml_spec__mathml_spec__mathchoice_inline.snap  mathml_spec__mathml_spec__mathchoice_nested.snap  mathml_spec__mathml_spec__mathchoice_subscript.snap  mathml_spec__mathml_spec__menclose_colorbox.snap  mathml_spec__mathml_spec__msupsub_integrals.snap  mathml_spec__mathml_spec__msupsub_regular_operators.snap  mathml_spec__mathml_spec__munderover_large_operators.snap  (+9 more)
crates/wasm-binding/: Cargo.toml
crates/wasm-binding/src/: lib.rs
docs/: BENCHMARK.md  FLAMEGRAPH.md  GETTING_STARTED.md
xtask/: Cargo.toml
xtask/assets/: screenshot.html
xtask/src/: extract_data.rs  flamegraph.rs  main.rs
xtask/src/screenshotter/: args.rs  build.rs  compare.rs  dataset.rs  fs_utils.rs  logger.rs  mod.rs  models.rs  runner.rs  server.rs  viewport.rs  webdriver.rs
