[workspace]
members = ["crates/katex", "crates/wasm-binding", "xtask"]
default-members = ["crates/katex"]
resolver = "3"

[workspace.package]
edition = "2024"
publish = false
license = "MIT"
version = "0.1.2"
repository = "https://github.com/katex-rs/katex-rs"


[profile.release]
opt-level = "z"
lto = "fat"

[profile.profiling]
inherits = "release"
debug = true
lto = false