[package]
name = "xtask"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
camino = "1.1"
clap = { version = "4.5", features = ["derive"] }
inferno = "0.11"
axum = "0.7"
image = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thirtyfour = { version = "0.36", default-features = false, features = ["reqwest", "rustls-tls", "tokio-multi-threaded"] }
tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "signal", "net", "time", "fs"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }
url = "2.5"
xshell = "0.2"
futures = "0.3"
strum = "0.26"
strum_macros = "0.26"
atty = "0.2"
indicatif = "0.17"
console = "0.15"
