[package]
name = "xtask"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "Build and development utilities for the katex-rs project"

[dependencies]
color-eyre = "0.6"
camino = "1.1"
clap = { version = "4.5", features = ["derive"] }
inferno = "0.12"
axum = "0.8"
image = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thirtyfour = { version = "0.36", default-features = false, features = ["reqwest", "rustls-tls", "tokio-multi-threaded"] }
tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "signal", "net", "time", "fs"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
url = "2.5"
xshell = "0.2"
futures = "0.3"
strum = "0.27"
strum_macros = "0.27"
atty = "0.2"
indicatif = "0.18"
console = "0.16"
json5 = "1.0"
regex = "1.10"

[lints]
workspace = true
