[package]
name = "katex-wasm-binding"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
name = "katex"
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3.77", features = ["Document", "DocumentFragment", "Node", "Element", "Window", "Text"] }
console_error_panic_hook = "0.1.7"
katex = { path = "../katex", package = "katex-rs", features = ["wasm"] }
